--- a/src/app/prs/user/user-create/user-create.component.html
+++ b/src/app/prs/user/user-create/user-create.component.html
@@ -15,7 +15,10 @@
       </tr>
       <tr>
           <td>Password:</td>
-          <td><input [(ngModel)]="user.password" type="password"></td>
+          <td>
+            <input [(ngModel)]="user.password" type="password">
+            <input [(ngModel)]="password2" type="password">
+          </td>
         </tr>
       <tr>
         <td>Firstname:</td>
