--- a/src/app/prs/user/user-detail/user-detail.component.html
+++ b/src/app/prs/user/user-detail/user-detail.component.html
@@ -17,7 +17,7 @@
       <td>{{user.username}}</td>
     </tr>
     <tr>
-      <td>Firstname:</td>
+      <td>Name:</td>
       <td>{{user.firstname}} {{user.lastname}}</td>
     </tr>
     <tr>
