--- a/src/app/prs/user/user-edit/user-edit.component.html
+++ b/src/app/prs/user/user-edit/user-edit.component.html
@@ -1,3 +1,49 @@
-<p>
-  user-edit works!
-</p>
+<div class="component">
+
+    <div class="header">
+      <span class="pagetitle">USER EDIT</span> 
+    </div>
+  
+    <table class="table table-sm" *ngIf="user">
+        <tr>
+          <td>Id:</td>
+          <td><input [(ngModel)]="user.id" type="number" disabled></td>
+        </tr>
+        <tr>
+          <td>Username:</td>
+          <td><input [(ngModel)]="user.username" type="text"></td>
+        </tr>
+        <tr>
+            <td>Password:</td>
+            <td>
+              <input [(ngModel)]="user.password" type="password">
+              <input [(ngModel)]="password2" type="password">
+            </td>
+          </tr>
+        <tr>
+          <td>Firstname:</td>
+          <td><input [(ngModel)]="user.firstname" type="text"></td>
+        </tr>
+        <tr>
+          <td>Lastname:</td>
+          <td><input [(ngModel)]="user.lastname" type="text"></td>
+        </tr>
+        <tr>
+          <td>Email:</td>
+          <td><input [(ngModel)]="user.email" type="text"></td>
+        </tr>
+        <tr>
+          <td>Phone:</td>
+          <td><input [(ngModel)]="user.phone" type="text"></td>
+        </tr>
+        <tr>
+          <td>IsReviewer:</td>
+          <td><input [(ngModel)]="user.isReviewer" type="checkbox"></td>
+        </tr>
+        <tr>
+          <td>IsAdmin:</td>
+          <td><input [(ngModel)]="user.isAdmin" type="checkbox"></td>
+        </tr>
+        </table>
+        <button (click)="save()" class="btn btn-primary btn-sm">SAVE</button>
+  </div> 
