--- a/src/app/prs/user/user-detail/user-detail.component.html
+++ b/src/app/prs/user/user-detail/user-detail.component.html
@@ -37,4 +37,9 @@
       <td>{{user.isAdmin | bool}}</td>
     </tr>
     </table>
+    <button (click)="edit()" class="btn btn-primary btn-sm">EDIT</button> |
+    <button (click)="verify()" class="btn btn-primary btn-sm">DELETE</button> |
+    <span *ngIf="verifyDelete">
+      <button (click)="delete()" class="btn btn-primary btn-sm">VERIFY</button>
+    </span>
 </div>
