--- a/src/app/prs/user/user-detail/user-detail.component.html
+++ b/src/app/prs/user/user-detail/user-detail.component.html
@@ -1,10 +1,8 @@
+<app-menu></app-menu>
 <div class="component">
 
   <div class="header">
-    <span class="pagetitle">USER DETAIL</span> |
-    <span>
-      <a routerLink = "/users/list">RETURN TO LIST</a>
-    </span>
+    <span class="pagetitle">USER DETAIL</span> 
   </div>
 
   <table class="table table-sm" *ngIf="user">
