--- a/src/app/core/menuitem/menuitem.component.css
+++ b/src/app/core/menuitem/menuitem.component.css
@@ -1,3 +1,15 @@
-.menuItem{
+li {
     display: inline-block;
+    text-align: center;
+}
+
+a{
+    text-decoration: nane;
+    color: rgb(15, 15, 15);
+    padding: 0 15px;
+}
+
+a:hover{
+    color: wheat;
+    background-color: crimson;
 }
