--- a/src/app/prs/user/user-list/user-list.component.html
+++ b/src/app/prs/user/user-list/user-list.component.html
@@ -11,10 +11,10 @@
   <table class="table table-sm">
     <tr class="tableheader">
       <td>Id</td>
-      <td> <a (click) ="sortBy('username')">Username</a></td>
-      <td>Full Name</td>
-      <td>Reviewer</td>
-      <td>Admin</td>
+      <td><a (click) ="sortBy('username')">Username</a></td>
+      <td><a (click) ="sortBy('lastname')">Full Name</a></td>
+      <td><a (click) ="sortBy('isReviewer')">Reviewer</a></td>
+      <td><a (click) ="sortBy('isAdmin')">Admin</a></td>
       <td>Actions</td>
     </tr>
     <tr *ngFor = "let user of users  | sort: sortCriteria : sortOrder "> 
