product-class list

--- a/src/app/prs/product/product-create/product-create.component.html
+++ b/src/app/prs/product/product-create/product-create.component.html
@@ -1,3 +1,6 @@
-<p>
-  product-create works!
-</p>
+<app-menu></app-menu>
+<div class="component">
+
+  <div class="header">
+    <span class="pagetitle">PRODUCT CREATE</span> 
+  </div>
