--- a/src/app/prs/product/product-detail/product-detail.component.html
+++ b/src/app/prs/product/product-detail/product-detail.component.html
@@ -1,3 +1,8 @@
-<p>
-  product-detail works!
-</p>
+<app-menu></app-menu>
+<div class="component">
+
+  <div class="header">
+    <span class="pagetitle">PRODUCT DETAIL</span> 
+  </div>
+  
+</div>
