--- a/src/app/prs/product/product-edit/product-edit.component.html
+++ b/src/app/prs/product/product-edit/product-edit.component.html
@@ -1,3 +1,8 @@
-<p>
-  product-edit works!
-</p>
+<app-menu></app-menu>
+<div class="component">
+
+  <div class="header">
+    <span class="pagetitle">PRODUCT EDIT</span> 
+  </div>
+  
+</div>
