--- a/src/app/prs/product/product-edit/product-edit.component.html
+++ b/src/app/prs/product/product-edit/product-edit.component.html
@@ -5,4 +5,34 @@
     <span class="pagetitle">PRODUCT EDIT</span> 
   </div>
   
+  <table class="table table-sm" *ngIf="product">
+      <tr>
+        <td>Id:</td>
+        <td><input [(ngModel)]="product.id" type="number" disabled></td>
+      </tr>
+      <tr>
+        <td>Part Number:</td>
+        <td><input [(ngModel)]="product.prtNbr" type="text"></td>
+      </tr>
+      <tr>
+          <td>Name:</td>
+          <td>
+            <input [(ngModel)]="product.name" type="text">
+          </td>
+        </tr>
+      <tr>
+        <td>Price:</td>
+        <td><input [(ngModel)]="product.price" type="text"></td>
+      </tr>
+      <tr>
+        <td>Unit:</td>
+        <td><input [(ngModel)]="product.unit" type="text"></td>
+      </tr>
+      <tr>
+        <td>Vendor Id:</td>
+        <td><input [(ngModel)]="product.vendorid" type="text"></td>
+      </tr>
+
+      </table>
+      <button (click)="save()" class="btn btn-primary btn-sm">SAVE</button>
 </div>
