request-create post issure

--- a/src/app/prs/request/request-list/request-list.component.html
+++ b/src/app/prs/request/request-list/request-list.component.html
@@ -31,7 +31,7 @@
       <td>{{request.userId}}</td>
       <td>
           <span class="actions">
-            <a routerLink="/request/detail/{{request.id}}">DETAIL</a> |
+            <a routerLink="/requests/detail/{{request.id}}">DETAIL</a> |
             <a routerLink="/requests/edit/{{request.id}}">EDIT</a>
           </span>
         </td>
