added search pipe for request and product

--- a/src/app/prs/product/product-detail/product-detail.component.html
+++ b/src/app/prs/product/product-detail/product-detail.component.html
@@ -12,7 +12,7 @@
     </tr>
     <tr>
       <td>PartNbr:</td>
-      <td>{{product.prtnbr}}</td>
+      <td>{{product.prtNbr}}</td>
     </tr>
     <tr>
       <td>Name:</td>
