working on login

--- a/src/app/prs/request/request-create/request-create.component.html
+++ b/src/app/prs/request/request-create/request-create.component.html
@@ -30,15 +30,15 @@
       </tr>
       <tr>
         <td>Status:</td>
-        <td><input [(ngModel)]="request.status" type="text"></td>
+        <td><input [(ngModel)]="request.status" type="text" disabled></td>
       </tr>
       <tr>
         <td>Total:</td>
-        <td><input [(ngModel)]="request.total" type="text"></td>
+        <td><input [(ngModel)]="request.total" type="text" disabled></td>
       </tr>
       <tr>
         <td>User:</td>
-        <td><input [(ngModel)]="request.userId" type="text"></td>
+        <td><input [(ngModel)]="request.userId" type="text" disabled></td>
       </tr>
 
       </table>
