login - set user to request create

--- a/src/app/prs/request/request-create/request-create.component.html
+++ b/src/app/prs/request/request-create/request-create.component.html
@@ -38,7 +38,7 @@
       </tr>
       <tr>
         <td>User:</td>
-        <td><input [(ngModel)]="request.userId" type="text" disabled></td>
+        <td><input [(ngModel)]="request.userId" type="text" disable></td>
       </tr>
 
       </table>
