--- a/src/app/prs/product/product-create/product-create.component.html
+++ b/src/app/prs/product/product-create/product-create.component.html
@@ -30,7 +30,10 @@
       </tr>
       <tr>
         <td>Vendor Id:</td>
-        <td><input [(ngModel)]="product.vendorid" type="text"></td>
+        <!-- <td><input [(ngModel)]="product.vendorid" type="text"></td> -->
+        <td><select [(ngModel)]="product.vendorid">
+          <option *ngFor= "let vendor of vendors" [ngValue]="vendor.id">{{vendor.name}}</option></select>
+        </td>
       </tr>
 
       </table>
