--- a/src/app/prs/product/product-create/product-create.component.html
+++ b/src/app/prs/product/product-create/product-create.component.html
@@ -5,7 +5,7 @@
     <span class="pagetitle">PRODUCT CREATE</span> 
   </div>
 
-  <table class="table table-sm">
+  <table class="table table-sm" *ngIf = "product">
       <tr>
         <td>Id:</td>
         <td><input [(ngModel)]="product.id" type="number" disabled></td>
@@ -33,7 +33,7 @@
         <!-- <td><input [(ngModel)]="product.vendorid" type="text"></td> -->
         <td>
           <select [(ngModel)]="product.vendorId">
-          <option *ngFor = "let vendor of vendors" [ngValue]="vendorid">{{vendor.name}}</option></select>
+            <option *ngFor = "let vendor of vendors" [ngValue]="vendorid">{{vendor.name}}</option></select>
         </td>
       </tr>
 
