working on requestline - list component and routing

--- a/src/app/prs/request/request-list/request-list.component.html
+++ b/src/app/prs/request/request-list/request-list.component.html
@@ -34,7 +34,7 @@
           <span class="actions">
             <a routerLink="/requests/detail/{{request.id}}">DETAIL</a> |
             <a routerLink="/requests/edit/{{request.id}}">EDIT</a> |
-            <a routerLink="/requests/edit/{{request.id}}">LINES</a>
+            <a routerLink="/requestlines/list">LINES</a>
           </span>
         </td>
     </tr>
