--- a/src/app/prs/request/request-edit/request-edit.component.html
+++ b/src/app/prs/request/request-edit/request-edit.component.html
@@ -5,7 +5,7 @@
     <span class="pagetitle">REQUEST EDIT</span> 
   </div>
 
-  <table class="table table-sm">
+  <table class="table table-sm" *ngIf="request">
       <tr>
         <td>Id:</td>
         <td><input [(ngModel)]="request.id" type="number" disabled></td>
