--- a/src/app/prs/request/request-create/request-create.component.html
+++ b/src/app/prs/request/request-create/request-create.component.html
@@ -5,7 +5,7 @@
     <span class="pagetitle">REQUEST CREATE</span> 
   </div>
 
-  <table class="table table-sm" *ngIf="request">
+  <table class="table table-sm"> 
       <tr>
         <td>Id:</td>
         <td><input [(ngModel)]="request.id" type="number" disabled></td>
