working on requestline detail/delete

--- a/src/app/prs/product/product-list/product-list.component.html
+++ b/src/app/prs/product/product-list/product-list.component.html
@@ -23,7 +23,7 @@
       <td>{{product.id}}</td>
       <td>{{product.prtNbr}}</td>
       <td>{{product.name}}</td>
-      <td>{{product.price}}</td>
+      <td>{{product.price | currency}}</td>
       <td>{{product.unit}}</td>
       <td>{{product.vendorId}}</td>
       <td>
