--- a/src/app/prs/request/request-list/request-list.component.html
+++ b/src/app/prs/request/request-list/request-list.component.html
@@ -13,9 +13,9 @@
     <tr class="tableheader">
       <td>Id</td>
       <td><a (click) ="sortBy('description')">Description</a></td>
-      <td><a (click) ="sortBy('justification')">Description</a></td>
+      <!-- <td><a (click) ="sortBy('justification')">Justification</a></td>
       <td><a (click) ="sortBy('rejectionReason')">Rejection Reason</a></td>
-      <td><a (click) ="sortBy('delivaryMode')">Delivary Mode</a></td>
+      <td><a (click) ="sortBy('delivaryMode')">Delivary Mode</a></td> -->
       <td><a (click) ="sortBy('status')">Status</a></td>
       <td><a (click) ="sortBy('total')">Total</a></td>
       <td><a (click) ="sortBy('userId')">User</a></td>
@@ -24,9 +24,9 @@
     <tr *ngFor = "let request of requests |sort: sortCriteria : sortOrder ">
       <td>{{request.id}}</td>
       <td>{{request.description}}</td>
-      <td>{{request.justification}}</td>
+      <!-- <td>{{request.justification}}</td>
       <td>{{request.rejectionReason}}</td>
-      <td>{{request.delivaryMode}}</td>
+      <td>{{request.delivaryMode}}</td> -->
       <td>{{request.status}}</td>
       <td>{{request.total}}</td>
       <td>{{request.userId}}</td>
