--- a/src/app/prs/requestLine/requestline-list/requestline-list.component.html
+++ b/src/app/prs/requestLine/requestline-list/requestline-list.component.html
@@ -2,28 +2,22 @@
 <div class="component">
 
   <div class="header">
-    <span class="pagetitle">REQUEST LIST</span> |
-    <!-- <span class="createlink">
-      <a routerLink="/requests/create">CREATE</a>
-    </span> | -->
-    <input class="search" [(ngModel)] = "searchCriteria" type=text placeholder="Search">
+    <span class="pagetitle">REQUESTLINES LIST</span>
   </div>
 
   <table class="table table-sm">
     <tr class="tableheader">
-      <td>Id</td>
-      <td><a (click) ="sortBy('description')">Product</a></td>
-      <td><a (click) ="sortBy('justification')">Quantity</a></td>
-      <td><a (click) ="sortBy('rejectionReason')">Price</a></td>
-      <td><a (click) ="sortBy('delivaryMode')">Subtotal</a></td>
+      <td>Product</td>
+      <td>Quantity</td>
+      <td>Price</td>
+      <td>Subtotal</td>
       <td>Action</td>
     </tr>
-    <tr *ngFor = "let requestline of requestlines |sort: sortCriteria : sortOrder ">
-      <td>{{requestlines.id}}</td>
-      <td>{{requestlines.productId}}</td>
-      <td>{{requestlines.quantity}}</td>
-      <td>{{requestlines.price}}</td>
-      <td>{{requestlines.total}}</td>
+    <tr *ngFor = "let line of requestlines">
+      <td>{{line.product.name}}</td>
+      <td>{{line.quantity}}</td>
+      <td>{{line.product.price | currency}} </td>
+      <td>{{line.product.price * line.quantity | currency}}</td>
       <td>
           <span class="actions">
             <a routerLink="/requestlines/detail/{{requestlines.id}}">DELETE</a> |
