--- a/src/app/prs/requestLine/requestline-edit/requestline-edit.component.html
+++ b/src/app/prs/requestLine/requestline-edit/requestline-edit.component.html
@@ -1,3 +1,24 @@
-<p>
-  requestline-edit works!
-</p>
+<app-menu></app-menu>
+<div class="component">
+
+  <div class="header">
+    <span class="pagetitle">REQUEST LINE EDIT</span> 
+  </div>
+  
+  <table class="table table-sm" *ngIf="requestline">
+    <tr>
+      <td>ID</td>
+      <td><input [(ngModel)]="requestline.id" type="text"></td>
+    </tr>
+    <tr>
+      <td>Product</td>
+      <td><input [(ngModel)]="requestline.product.name" type="text"></td>
+    </tr>
+    <tr>
+      <td>Quantity</td>
+      <td><input [(ngModel)]="requestline.quantity" type="text"></td>
+    </tr>
+
+  </table>
+  <button (click)="save()" class="btn btn-primary btn-sm">SAVE</button>
+</div>
