added hidden to all id fields

--- a/src/app/prs/product/product-create/product-create.component.html
+++ b/src/app/prs/product/product-create/product-create.component.html
@@ -7,7 +7,7 @@
 
   <table class="table table-sm" *ngIf = "product">
       <tr>
-        <td>Id:</td>
+        <td hidden>Id:</td>
         <td><input [(ngModel)]="product.id" type="number" disabled></td>
       </tr>
       <tr>
