--- a/src/app/prs/product/product-detail/product-detail.component.html
+++ b/src/app/prs/product/product-detail/product-detail.component.html
@@ -7,8 +7,8 @@
 
   <table class="table table-sm" *ngIf="product">
     <tr>
-      <td>Id:</td>
-      <td>{{product.id}}</td>
+      <td hidden>Id:</td>
+      <td hidden>{{product.id}}</td>
     </tr>
     <tr>
       <td>PartNbr:</td>
