--- a/src/app/prs/request/request-detail/request-detail.component.html
+++ b/src/app/prs/request/request-detail/request-detail.component.html
@@ -8,8 +8,8 @@
 
   <table class="table table-sm" *ngIf="request">
     <tr>
-      <td>Id:</td>
-      <td>{{request.id}}</td>
+      <td hidden>Id:</td>
+      <td hidden>{{request.id}}</td>
     </tr>
     <tr>
       <td>Description:</td>
