--- a/src/app/prs/requestLine/requestline-edit/requestline-edit.component.html
+++ b/src/app/prs/requestLine/requestline-edit/requestline-edit.component.html
@@ -7,8 +7,8 @@
   
   <table class="table table-sm" *ngIf="requestline">
     <tr>
-      <td>ID</td>
-      <td><input [(ngModel)]="requestline.id" type="text"></td>
+      <td hidden>ID</td>
+      <td hidden><input [(ngModel)]="requestline.id" type="text" disabled></td>
     </tr>
     <tr>
       <td>Product</td>
