--- a/src/app/prs/user/user-create/user-create.component.html
+++ b/src/app/prs/user/user-create/user-create.component.html
@@ -7,8 +7,8 @@
 
   <table class="table table-sm">
       <tr>
-        <td>Id:</td>
-        <td><input [(ngModel)]="user.id" type="number" disabled></td>
+        <td hidden>Id:</td>
+        <td hidden><input [(ngModel)]="user.id" type="number" disabled></td>
       </tr>
       <tr>
         <td>Username:</td>
