--- a/src/app/prs/user/user-detail/user-detail.component.html
+++ b/src/app/prs/user/user-detail/user-detail.component.html
@@ -7,8 +7,8 @@
 
   <table class="table table-sm" *ngIf="user">
     <tr>
-      <td>Id:</td>
-      <td>{{user.id}}</td>
+      <td hidden>Id:</td>
+      <td hidden>{{user.id}}</td>
     </tr>
     <tr>
       <td>Username:</td>
