--- a/src/app/prs/product/product-edit/product-edit.component.html
+++ b/src/app/prs/product/product-edit/product-edit.component.html
@@ -7,8 +7,8 @@
   
   <table class="table table-sm" *ngIf="product">
       <tr>
-        <td>Id:</td>
-        <td><input [(ngModel)]="product.id" type="number" disabled></td>
+        <td hidden>Id:</td>
+        <td hidden><input [(ngModel)]="product.id" type="number" disabled></td>
       </tr>
       <tr>
         <td>Part Number:</td>
