--- a/src/app/prs/request/request-create/request-create.component.html
+++ b/src/app/prs/request/request-create/request-create.component.html
@@ -7,8 +7,8 @@
 
   <table class="table table-sm"> 
       <tr>
-        <td>Id:</td>
-        <td><input [(ngModel)]="request.id" type="number" disabled></td>
+        <td hidden>Id:</td>
+        <td hidden><input [(ngModel)]="request.id" type="number" disabled></td>
       </tr>
       <tr>
         <td>Description:</td>
