--- a/src/app/prs/requestLine/requestline-list/requestline-list.component.html
+++ b/src/app/prs/requestLine/requestline-list/requestline-list.component.html
@@ -7,6 +7,7 @@
 
   <table class="table table-sm">
     <tr class="tableheader">
+      <td hidden>Id</td>
       <td>Product</td>
       <td>Quantity</td>
       <td>Price</td>
@@ -14,14 +15,15 @@
       <td>Action</td>
     </tr>
     <tr *ngFor = "let line of requestlines">
+      <td hidden>{{line.id}}</td>
       <td>{{line.product.name}}</td>
       <td>{{line.quantity}}</td>
       <td>{{line.product.price | currency}} </td>
       <td>{{line.product.price * line.quantity | currency}}</td>
       <td>
           <span class="actions">
-            <a routerLink="/requestlines/detail/{{requestlines.id}}">DELETE</a> |
-            <a routerLink="/requestlines/edit/{{requestlines.id}}">EDIT</a> 
+            <a routerLink="/requestlines/detail">DELETE</a> |
+            <a routerLink="/requestlines/edit">EDIT</a> 
           </span>
         </td>
     </tr>
