request create set user

--- a/src/app/prs/product/product-create/product-create.component.html
+++ b/src/app/prs/product/product-create/product-create.component.html
@@ -8,7 +8,7 @@
   <table class="table table-sm" *ngIf = "product">
       <tr>
         <td hidden>Id:</td>
-        <td><input [(ngModel)]="product.id" type="number" disabled></td>
+        <td hidden><input [(ngModel)]="product.id" type="number" disabled></td>
       </tr>
       <tr>
         <td>Part Number:</td>
