--- a/src/app/prs/requestLine/requestline-list/requestline-list.component.html
+++ b/src/app/prs/requestLine/requestline-list/requestline-list.component.html
@@ -36,7 +36,7 @@
       <td>Quantity</td>
       <td>Price</td>
       <td>Subtotal</td>
-      <!-- <td>Action</td> -->
+      <td>Action</td>
     </tr>
     <tr *ngFor = "let line of requestlines">
       <td hidden>{{line.id}}</td>
@@ -44,12 +44,12 @@
       <td>{{line.quantity}}</td>
       <td>{{line.product.price | currency}} </td>
       <td>{{line.product.price * line.quantity | currency}}</td>
-      <!-- <td>
+      <td>
           <span class="actions">
             <a routerLink="/requestlines/detail/{{line.id}}">DELETE</a> |
             <a routerLink="/requestlines/edit/{{line.id}}">EDIT</a> 
           </span>
-        </td> -->
+        </td>
     </tr>
 
   </table>
