--- a/src/app/prs/review/review-list/review-list.component.html
+++ b/src/app/prs/review/review-list/review-list.component.html
@@ -2,10 +2,10 @@
 <div class="component">
 
   <div class="header">
-    <span class="pagetitle">REQUEST LIST</span> |
-    <span class="createlink">
+    <span class="pagetitle">REVIEW LIST</span> 
+    <!-- <span class="createlink">
       <a routerLink="/requests/create">CREATE</a>
-    </span> |
+    </span> | -->
     <!-- <input class="search" [(ngModel)] = "searchCriteria" type=text placeholder="Search"> -->
   </div>
 
