--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,1 +1,7 @@
 <app-menu></app-menu>
+
+<footer class="footer mt-auto py-3">
+    <div class="container">
+        <span class="text-muted">Purchase Request System (PRS) is copyright (c) 2019 Lidya Tsegay all rights reserved.</span>
+    </div>
+</footer>
