--- a/src/app/core/menu/menu.component.html
+++ b/src/app/core/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="navbar navbar-dark bg-primary">
   <ul>
     <app-menuitem *ngFor="let menu of menus" [menu]="menu"></app-menuitem>
   </ul>
