--- a/src/app/prs/requestLine/requestline-list/requestline-list.component.html
+++ b/src/app/prs/requestLine/requestline-list/requestline-list.component.html
@@ -2,7 +2,7 @@
 <div class="component">
 
   <div class="header">
-    <span class="pagetitle">REQUEST LIST</span> |
+    <span class="pagetitle">REQUEST LIST</span> 
     <!-- <span class="createlink">
       <a routerLink="/requests/create">CREATE</a>
     </span> | -->
@@ -30,10 +30,10 @@
 
 <div>
     <div class="header">
-        <span class="pagetitle">REQUESTLINE LIST</span> 
+        <span class="pagetitle">REQUESTLINE LIST</span> | 
         <span class="createlink">
           <a routerLink="/requestlines/detail">CREATE</a>
-        </span> |
+        </span> 
         <!-- <input class="search" [(ngModel)] = "searchCriteria" type=text placeholder="Search"> -->
       </div>
 
