--- a/src/app/prs/review/review-list/review-list.component.html
+++ b/src/app/prs/review/review-list/review-list.component.html
@@ -47,7 +47,7 @@
     </tr>
 
   </table>
-  <button><a routerLink="/review">APPROVE</a></button> |
-  <button><a routerLink="/review/item/{{line.id}}">REJECT</a></button> 
+  <!-- <button><a routerLink="/review">APPROVE</a></button> |
+  <button><a routerLink="/review/item/{{line.id}}">REJECT</a></button>  -->
 
 </div>
