--- a/src/app/prs/request/request-create/request-create.component.html
+++ b/src/app/prs/request/request-create/request-create.component.html
@@ -5,7 +5,7 @@
     <span class="pagetitle">REQUEST CREATE</span> 
   </div>
 
-  <table class="table table-sm" > 
+  <table class="table table-sm" *ngIf="request"> 
       <tr>
         <td hidden>Id:</td>
         <td hidden><input [(ngModel)]="request.id" type="number" disabled></td>
@@ -36,9 +36,13 @@
         <td>Total:</td>
         <td><input [(ngModel)]="request.total" type="text" disabled></td>
       </tr>
+      <!-- <tr>
+        <td>User Id:</td>
+        <td><input [(ngModel)]="request.userId" type="text" disable></td>
+      </tr> -->
       <tr>
         <td>User:</td>
-        <td><input [(ngModel)]="request.User" type="text" disable></td>
+        <td><input [(ngModel)]="_loggedInUsername" type="text" disabled></td>
       </tr>
 
       </table>
